export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 18,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_struct": 7,
' +
  '          "nested": 9,
' +
  '          "nested_with_ref": 14
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 8
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 10,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 11
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          12,
" +
  "          13
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 15,
' +
  '          "two": 17
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 16,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 14,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 2`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1XzY7bNhD2WU8xUC4SIGst2fDBrXNJegiQRY1kWxRYBAZt0bZQiRQoqmvX8Jv0bfpimSFlS3I2WeRnF8jCA+xa5HA+DmdIzselzIuMb8Ni13s0GaCMRyPzi3L+Gw+G4140GI0j/IyH1B9FcRT3Br0nkKrUTAH0vlfOF/eTyAt4JYudStcbDddcM70rOPz+/38BZOmSi5InUImEK9AbDtfy3zTLGMyqBWrhrR0Bf3JVplJAHA5C5wW8n73+q1/r+m8SLnS6SrmawPXsbR/HOM5KyRxoprVixWYu+FZDmhdSaVgHoINGd9/QUFUImfMyRGx5NHyN3++swnFKmfMbWskUdFhqVS215wDK3vwncaXg7gTVTCm283SYCs3XXHl+AHkqpsMABMv51L25k64fNHYa22QnC42LZhmaFkpud577vp7V9evxB/tjcU7awPEdZ2nP3UNOsjkqUrE2M9pPr+0Mm68yybRRmy+PfI/CAS6iynSKc8zlaopR71iJORdVbqzow7s10Qjs4j6cDa0D05gcI0UdXDEKw/TWjcg+PrOe23Ud3acl7t1/WFbZ2CPAgkJ+aBsJXmqedHLDU9x+yrttxaDlh//B95t0fAo1v0PzueIrxDzujHsS9KpJic0RmTV7z7OjNEL26+z1SVm6PrAS+LaQJZ8YPLMvp+0t6flGUVQL7F+HM4nnZxcW5hyhzigtgnfynmaaElS4qsSy6SdpbZ+go9DhQsqMM9GOg7VI0HvPh+lLwETQEo8qPzQBKoxTHjpVm/pO7yLPXMqlSgtdXumN4jzUZe8R5IH6j5V/eF7/4+EoutT/J5Crq68hAL9lrNStym8qPkJ8tuTXBrbs032tVmzJ4YZ22xtRVNoUu8UEbCX4BRusaRwchy5FrO50A9L9Dmaf0l24BxbAAg6TFhhdW3vs2eNth3Nt9QTe8aVUya+2bAS4lL+FvBMv6eb3J2Zy1p685cnBaBXXlRKn2cin3nOSMqVC8qj0/6HzH43H8Sf8fzAaXM7/E8jz5P/McOoTP8QHQdRm2XuXIRXEE+0uOoTWcOcY2ajjLDoIVoGcmm2noyGqqxJD0kFMkw4UElQX6Zxlvkg9PXdGLf9wfFb8gQguItGgB5FYpTdSNVjW+IRlob9EWL+BqFKG7+OqpDY3OZLt9oBj3+foLL4wWmy2jPA+DTqsNIrdLhM9IraYLL5PWiCUhQAogick6jJo3h7SZAKUNZOsg3+G3mHHBrNWuNjY0WPGurViWYlPuoYtt7yhymP9sbtwbtZFf3XsaQBC5TKpMmyfs60vuWQDfj7thZNf5CIX+VHyET3CclQAFgAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 3`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 18,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_struct": 7,
' +
  '          "nested": 9,
' +
  '          "nested_with_ref": 14
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 8
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 10,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 11
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          12,
" +
  "          13
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 15,
' +
  '          "two": 17
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 16,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 14,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 4`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1X3YrjNhTOdZ7i4CsbHCdOsnPhdvdmpxcLLTPsTqEwDEFx5MTUlowsNwnBb9K36Yv1HMl2nMzAtiwT9ieHBMvy+T/S0adY5kXGd4EuB69GE6Sb+dw8kc6f03D+ZhBO5jfhZDqZzmg+DKdhOJgMLkBVqZkCGHwpnQf3jdB4DO9lsVfpeqPhN66Z3hcc7v7524csjbko+QoqseIK9IbDLxkrdRrDr/YTTINJMEQVn+5v/xg1k6MPKy50mqRcRa3ACBmHxPhwd3sXQYWiaV5IpSFnxbAZHmDtg8YferBWrNhADYmSOThBMD77dTxjNCbHpYrHuVzhKnZ+Oqq7xU8fK/Ql5/9PlbJCpZmxSoexFKWGUub8gTL0FnRQalXF2j0MAaTgEc4wpdje1UEqNF9z5Xo+upGnIoIZ1DQWLEdG52ErHag9HyX1VpKkLHQqBctQuFByt3edT40px0O+vnD3ATV0jsV2H7/kG1vgSyrWkZ3GkWsss0WSSaZp2gzcxtXQh7zKdIr67pIIpo2jTCy4qHJipydXTHP30cHIHR8cDMN5avma8Dv+Nh0HaCUx1ggenZBEp85Ta2Jh3Y56AcBfLKtMclF0STltmAUvNV+d5a4tAE9xuSr3sRdxzw/vyfN6OhZb5F4ojsG29T3N+Ptjcpukd4vGdTTqGDXpH9F8iUG5fFfIknvw9h1QDWyRaDlhdQTf9temiwpbjqJaIsM6uJe4+/YBvuKTGJDDqjQlxWWDViOjMEgqEbtmEvrLwG+mdLCUMuNM2KoTHZon8a8oQNc4ihnHWnbfeJJwqsUBNMPF4wgqNW4kVmKN9y1fbQdeQEm0brvotrFFqaL/4EpfK5WxSgtdjvVGcf5KKOAz5z+e/LPz8386m1/P/0vQJc9/ar8qYTGHB1ptH0RRadOLlhHY5k6NkB1f6uGQmh4e5tTjqMmDWafU7Q7AfFhCHfWUUc851NSxsJtqvsPm9ZHHUq1+tqeAj6H8KeRWvKO25UXGOOsb73lSm6+K60qJzhr5NPieqEzpwHhV+P9Z/D95c/MM/09m8+v+vwBddP9/OzifGRDd4cUj/g9P0LXpCqcI10JoAs19eL480ddxIdJmuwjmsz4v3o7UOYZPV30rBlwhGDRAubku3OOrc3ZT+B01ndwSSOY/qGaV3khl7mnqVKOx8jIEfjXo2zKY4wNhfp+rnXsJIps72REhl3ivWfod9j1BvuG0wb31CY5ttTfA2VzVjgpNdkxKn2ulb0Yz1poSTKU2da29Fy0ZrYUdO/iyp4uR9S1hWWkvgcYHOuwaL+wGaKE/xvds1NXNiKFO3DxVRhPnuM+5AvkrXelKV/qh6F/K87GiABgAAA=="
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;
